--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "typo3-cms-extension",
     "description": "Integrates the mosparo spam protection system into TYPO3's Powermail extension, enabling easy and effective spam protection for Powermail forms.",
     "license": "GPL-2.0-or-later",
-    "homepage": "",
+    "homepage": "https://github.com/Digi92/mosparo-powermail",
     "authors": [
         {
             "name": "Sascha Zander",
